crates/swc/tests/tsc-references/destructuringObjectBindingPatternAndAssignment4.1.normal.js
//// [destructuringObjectBindingPatternAndAssignment4.ts]
var _ref = {}, _ref_a = _ref.a, a = _ref_a === void 0 ? 1 : _ref_a, _ref_b = _ref.b, b = _ref_b === void 0 ? 2 : _ref_b, _ref_c = _ref.c, c = _ref_c === void 0 ? b : _ref_c, _ref_d = _ref.d, d = _ref_d === void 0 ? a : _ref_d, _ref_e = _ref.e, e = _ref_e === void 0 ? f : _ref_e, _ref_f = _ref.f, f = _ref_f === void 0 ? f // error
 : _ref_f;
